--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1 class="display-1 text-capitalize text-center">Movie Slide Show</h1>
     <h4 class="display-4 text-center">Click Poster to View Trailer</h4>
     <div class="container-lg my-3">
-      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-bs-interval="1000" data-bs-ride="carousel">
         <ol class="carousel-indicators">
           <li
             data-bs-target="#myCarousel"
